--- a/index.html
+++ b/index.html
@@ -2,11 +2,60 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+    <<title>DEVICE</title>
+   </head>
+<body>
+	<header class="main-header">
+		<nav class="main-navigation">
+			<a class="main-header-logo">
+			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
+			</a>
+			<ul class="user-navigation">
+				<li class="site-search">Поиск по сайту</li>
+				<li class="login-link">Войти</li>
+				<li class="Compare">Сравнить</li>
+				<li class="basket">Корзина</li>
+			</ul>	
+		 <ul class="site-navigation">
+			<li><a href="product-catalog.html">Каталог товаров</a></li>
+			<li><a href="delivery.html">Доставка</a></li>
+			<li><a href="guarantee.html">Гарантия</a></li>
+			<li><a href="contacts.html">Контакты<a></li>
+		</ul>
+		</nav>
+	</header>
+	<main class="container">
+	<h1 class="visually-hidden">DEVICE</h1>
+		<section class="catalog-menu">
+		<h2 class="visually-hidden">Все о товаре</h2>
+		<img src="#img/selfi.img" width="200" height="200" alt="Селфи палка"></br>
+		<b>Делай селфи, как Бен Стиллер!</b>
+		<p>Самая длинная палка для селфи доступна в нашем магазине<br>
+		   Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
+		<p><b>Подробнее</b></p>
+		<table border="0">		
+			<tr>
+			 <td>8,5 м</td>
+			 <td>5 кг</td>
+			 <td>Карбон</td>
+			</tr>
+			<tr>
+			 <td><span>Длина палки</span></td>
+			 <td><span>Вес палки</span></td>
+			 <td><span>Материал</span></td>
+			</tr>
+		</table>
+		</section>
+		<section class="popular-items">
+		<ul>
+			<li><a href="#">Виртуальная реальность</a></li>
+			<li><a href="#">Моноподы для селфи</a></li>
+			<li><a href="#">Экшен камеры</a></li>
+			<li><a href="#">Фитнес браслеты</a></li>
+			<li><a href="#">умные часы</a></li>
+			<li><a href="#">Квадрокоптеры</a></li>
+		</ul>
+		</section>
+	</main>	
+</body>
 </html>
