--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <<title>DEVICE</title>
+    <title>DEVICE</title>
    </head>
 <body>
 	<header class="main-header">
 		<nav class="main-navigation">
 			<a class="main-header-logo">
 			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-			</a>
-			<ul class="user-navigation">
-				<li class="site-search">Поиск по сайту</li>
-				<li class="login-link">Войти</li>
-				<li class="Compare">Сравнить</li>
-				<li class="basket">Корзина</li>
-			</ul>	
+			</a><br>
+				<a href="#">Поиск по сайту</a>
+				<a href="#">Войти</a>
+				<a href="#">Сравнить</a>
+				<a href="#">Корзина</a>
 		 <ul class="site-navigation">
 			<li><a href="product-catalog.html">Каталог товаров</a></li>
 			<li><a href="delivery.html">Доставка</a></li>
