--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>DEVICE</title>
+    <<title>DEVICE</title>
    </head>
 <body>
 	<header class="main-header">
@@ -15,10 +15,10 @@
 				<a href="#">Сравнить</a>
 				<a href="#">Корзина</a>
 		 <ul class="site-navigation">
-			<li><a href="product-catalog.html">Каталог товаров</a></li>
-			<li><a href="delivery.html">Доставка</a></li>
-			<li><a href="guarantee.html">Гарантия</a></li>
-			<li><a href="contacts.html">Контакты<a></li>
+			<li><a href="#">Каталог товаров</a></li>
+			<li><a href="#">Доставка</a></li>
+			<li><a href="#">Гарантия</a></li>
+			<li><a href="#">Контакты<a></li>
 		</ul>
 		</nav>
 	</header>
@@ -30,7 +30,7 @@
 		<b>Делай селфи, как Бен Стиллер!</b>
 		<p>Самая длинная палка для селфи доступна в нашем магазине<br>
 		   Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
-		<p><b>Подробнее</b></p>
+		<p><a class="button learn-more-button" href="#"><b>Подробнее</b></a></p>
 		<table border="0">		
 			<tr>
 			 <td>8,5 м</td>
@@ -45,15 +45,119 @@
 		</table>
 		</section>
 		<section class="popular-items">
-		<ul>
-			<li><a href="#">Виртуальная реальность</a></li>
-			<li><a href="#">Моноподы для селфи</a></li>
-			<li><a href="#">Экшен камеры</a></li>
-			<li><a href="#">Фитнес браслеты</a></li>
-			<li><a href="#">умные часы</a></li>
-			<li><a href="#">Квадрокоптеры</a></li>
+		<ul class="feature-list">
+			<li class="feature-item">
+			  <a href="#">Виртуальная реальность</a>
+			</li>
+			<li class="feature-item">
+			  <a href="#">Моноподы для селфи</a>
+			</li>
+			<li class="feature-item">
+			  <a href="#">Экшен камеры</a>
+			</li>
+			<li class="feature-item">
+			  <a href="#">Фитнес браслеты</a>
+			</li>
+			<li class="feature-item">
+			  <a href="#">Умные часы</a>
+			</li>
+			<li class="feature-item">
+			  <a href="#">Квадрокоптеры</a>
+			</li>
 		</ul>
 		</section>
-	</main>	
+		<section class="services">
+		<ul class="feature-list">	
+			<li class="feature-item">
+			<a href="#"><span class="button services-button">Доставка</span></a>
+			</li>
+			<li class="feature-item">
+			<a href="#"><span class="button services-button">Гарантия</a>
+			</li>
+			<li class="feature-item">
+			<a href="#"><span class="button services-button">Кредит</a>
+			</li>
+		</ul>	
+			<b>Достака</b>
+			<p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
+			   подъезду совершенно бесплатно! Ведь мы неплохо<br>
+			   заработаем, поднимая его на ваш этаж
+			</p>
+			<img src="#img/delivery.img" width="50" height="100" alt="Курьер">
+		</section>
+		<section class="site-manufacturers">
+		<ul class="feature-list">
+			<li class="feature-item">
+			  <img src="#img/logo-1.img" width="50" height="50" alt="Dji">
+			</li>
+			<li class="feature-item">
+			  <img src="#img/logo-2.img" width="100" height="20" alt="SP">
+			</li>
+			<li class="feature-item">
+			  <img src="#img/logo-3.img" width="70" height="25" alt="GoPro">
+			</li>
+			<li class="feature-item">
+			  <img src="#img/logo-4.img" width="50" height="20" alt="VIVE">
+			</li>
+		</ul>
+		</section>
+		<section class="about-us">
+		<h2>О нас</h2>
+		<p>Огромный выбор гаджетов не оставит равнодушным гика,<br>
+		   который есть в каждом из нас
+		</p>
+		<p>Мы можем доставить ваш товар в самые отдаленные точки<br>
+		   России! DEVICE работает со многими транспортными кампаниями
+		</p>
+		<p>
+		  <b>Деловые линии</b>
+		</p>
+		<p>
+		  <b>Автотрейдинг</b>
+		</p>
+		<p>
+		  <b>ЖелДорЭкспедиция</b> 
+		</p>
+		<p>
+		 <a class="button more-about-us-button" href="#"><b>ПОДРОБНЕЕ О НАС</b></a>
+		</p>	
+		</section>
+		<section class="ontacts">
+		<h2>Контакты</h2>
+		<p>Вы можете забрать товар сами, заехав к нам в офис. Заодно, вы сможете<br>
+		   проверить работоспособность покупки. Всякое бывает.
+		</p>
+		<img src="#img/map.img" width="250" height="150" alt="Карта">
+		<p><a class="button contact-us-button" href="#"><b>НАПИШИТЕ НАМ</b></a>
+		</p>
+		</section>
+	</main>
+	<footer class="main-footer">
+	   <img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
+	   <p class="footer-location">
+	      г. Москва, ул. Строителей, 15
+	   </p>
+	<ul class="site-navigation">
+	  <li><a href="#">Доставка</a></li>
+	  <li><a href="#">Гарантия</a></li>
+	  <li><a href="#">Контакты<a></li>
+	</ul>
+    <div class="footer-social">
+	<ul>
+       <li><a class="social-button" href="#">Фейсбук</a></li>
+       <li><a class="social-button" href="#">Инстаграмм</a></li>
+	   <li><a class="social-button" href="#">Твиттер</a></li>
+	 </ul>  
+	</div> 
+    <nav>
+	   <a href="#">Войти</a>
+	   <a href="#">Сравнить</a>
+	   <a href="#">Корзина</a>
+	</nav>
+	<p class="footer-contacts">
+	   Тел.: +7(495) 495-95-95
+	</p>   
+	<img src="#img/logo-html.img" width="25" height="25" alt="Логотип Html">
+    </footer>	
 </body>
 </html>
