--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 <body>
 	<header class="main-header">
 			<a class="main-header-logo">
-			  <img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
+			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
 			</a><br>
-				<input placeholder="Поиск по сайту" type="text">
-				   </input>
+			  <form method="get">
+				<input placeholder="Поиск по сайту" type="search">
+				   </form>
 				<a href="#">Войти</a>
 				<a href="#">Сравнить</a>
 				<a href="#">Корзина</a>
 	<nav class="main-navigation">		
-		 <ul class="site-navigation">
-			<li class="catalog"><a class="catalog-1" href="#">Каталог товаров</a></li>
-			<li class="delivery"><a class="delivery-1" href="#">Доставка</a></li>
-			<li class="guarantee"><a class="guarantee-1" href="#">Гарантия</a></li>
-			<li class="contacts"><a class="contacts-1" href="#">Контакты<a></li>
+		 <ul class="main-navigation-list">
+			<li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a></li>
+			<li class="main-navigation"><a class="main-navigation-link" href="#">Доставка</a></li>
+			<li class="main-navigation"><a class="main-navigation-link" href="#">Гарантия</a></li>
+			<li class="main-navigation"><a class="main-navigation-link" href="#">Контакты</a></li>
 		 </ul>
 	</nav>
 	</header>
@@ -27,68 +28,70 @@
 	   <h1 class="visually-hidden">DEVICE</h1>
 		   <section class="product-slider">
 		<h2 class="visually-hidden">Все о товаре</h2>
-		   <img src="img/selfi.img" width="200" height="200" alt="Селфи палка"></br>
+		   <img src="img/selfi.img" width="200" height="200" alt="Селфи палка"><br>
 		<b>Делай селфи, как Бен Стиллер!</b>
 		<p>Самая длинная палка для селфи доступна в нашем магазине<br>
 		   Восемь (Восемь, Карл) метров длинной и весом 5 килограмм</p>
 		<p><a class="button learn-more-button" href="#"><b>Подробнее</b></a></p>
 	<table class="table-of-characteristics">		
 		<tr class="line-1">
-			 <td class="column-1">8,5 м</td>
-			 <td class="column-2">5 кг</td>
-			 <td class="column-3">Карбон</td>
+			 <td class="characteristic">8,5 м</td>
+			 <td class="characteristic">5 кг</td>
+			 <td class="characteristic">Карбон</td>
 		</tr>
 		<tr class="line-2">
-			 <td class="column-4"><span>Длина палки</span></td>
-			 <td class="column-5"><span>Вес палки</span></td>
-			 <td class="column-6"><span>Материал</span></td>
+			 <td class="characteristic-description"><span>Длина палки</span></td>
+			 <td class="characteristic-description"><span>Вес палки</span></td>
+			 <td class="characteristic-description"><span>Материал</span></td>
 		</tr>
 	</table>
-	</section>
+	       </section>
 	<section class="popular-items">
+	<h2 class="visually-hidden">Популярные товары</h2>
 		<ul class="product-categories">
 			<li class="feature-item">
-			  <a class="virtual-reality" href="#">Виртуальная реальность</a>
+			  <a class="popular-goods" href="#">Виртуальная реальность</a>
 			</li>
 			<li class="feature-item">
-			  <a class="monopods-for-selfie" href="#">Моноподы для селфи</a>
+			  <a class="popular-goods" href="#">Моноподы для селфи</a>
 			</li>
 			<li class="feature-item">
-			  <a class="action-camera" href="#">Экшен камеры</a>
+			  <a class="popular-goods" href="#">Экшен камеры</a>
 			</li>
 			<li class="feature-item">
-			  <a class="fitness-bracelets" href="#">Фитнес браслеты</a>
+			  <a class="popular-goods" href="#">Фитнес браслеты</a>
 			</li>
 			<li class="feature-item">
-			  <a class="smart-watch" href="#">Умные часы</a>
+			  <a class="popular-goods" href="#">Умные часы</a>
 			</li>
 			<li class="feature-item">
-			  <a class="quadrocopters" href="#">Квадрокоптеры</a>
+			  <a class="popular-goods" href="#">Квадрокоптеры</a>
 			</li>
 		</ul>
 		</section>
-		   <section class="slider">
+		<section class="slider">
+		<h2 class="visually-hidden">Услуги</h2>
 		<ul class="feature-list">	
 			<li class="feature-item">
-			  <span class="button services-button">Доставка</span></a>
+			  <span class="button services-button">Доставка</span>
 			</li>
 			<li class="feature-item">
-			  <span class="button services-button">Гарантия</a>
+			  <span class="button services-button">Гарантия</span>
 			</li>
 			<li class="feature-item">
-			  <span class="button services-button">Кредит</a>
+			  <span class="button services-button">Кредит</span>
 			</li>
 		</ul>	
 			<b>Достака</b>
 			<p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
 			   подъезду совершенно бесплатно! Ведь мы неплохо<br>
-			   заработаем, поднимая его на ваш этаж
-			</p>
+			   заработаем, поднимая его на ваш этаж</p>
 			<img src="#img/delivery.img" width="50" height="100" alt="Курьер">
 		</section>
 		<section class="site-manufacturers">
+		<h2 class="visually-hidden">Партнеры</h2>
 		<ul class="logo-of-the-creators">
-			<li class="feature-item">
+			<li class="partners">
 			  <img src="#img/logo-1.img" width="50" height="50" alt="Dji">
 			</li>
 			<li class="feature-item">
@@ -105,20 +108,12 @@
 		<section class="about-us">
 		<h2>О нас</h2>
 		<p>Огромный выбор гаджетов не оставит равнодушным гика,<br>
-		   который есть в каждом из нас
-		</p>
+		   который есть в каждом из нас</p>
 		<p>Мы можем доставить ваш товар в самые отдаленные точки<br>
-		   России! DEVICE работает со многими транспортными кампаниями
-		</p>
-		<p>
-		  <b>Деловые линии</b>
-		</p>
-		<p>
-		  <b>Автотрейдинг</b>
-		</p>
-		<p>
-		  <b>ЖелДорЭкспедиция</b> 
-		</p>
+		   России! DEVICE работает со многими транспортными кампаниями</p>
+		<p><b>Деловые линии</b></p>
+		<p><b>Автотрейдинг</b></p>
+		<p><b>ЖелДорЭкспедиция</b></p>
 		 <a class="button more-about-us-button" href="#"><b>Подробнее о нас</b></a>
 		</section>
 		<section class="contacts">
@@ -126,25 +121,22 @@
 		<p>Вы можете забрать товар сами, заехав к нам в офис. Заодно, вы сможете<br>
 		   проверить работоспособность покупки. Всякое бывает.
 		</p>
-		   <a href="#"><img src="#img/map.img" width="250" height="150" alt="Карта">
-		<p><a class="button contact-us-button" href="#"><b>Напишите нам</b></a>
-		</p>
+		   <a href="#"><img src="#img/map.img" width="250" height="150" alt="Карта"></a>
+		<p><a class="button contact-us-button" href="#">Напишите нам</a></p>
 		</section>
 	</main>
 	<footer class="main-footer">
 	   <img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
-	   <p class="footer-location">
-	      г. Москва, ул. Строителей, 15
-	   </p>
+	   <p class="footer-location">г. Москва, ул. Строителей, 15</p>
 	<ul class="site-navigation">
 	  <li><a href="#">Доставка</a></li>
 	  <li><a href="#">Гарантия</a></li>
-	  <li><a href="#">Контакты<a></li>
+	  <li><a href="#">Контакты</a></li>
 	</ul>
 	<ul class="footer-social">
-       <li class="facebook"><a class="social-button" href="#">Фейсбук</a></li>
-       <li class="instagram"><a class="social-button" href="#">Инстаграмм</a></li>
-	   <li class="twitter"><a class="social-button" href="#">Твиттер</a></li>
+       <li><a class="social-button-facebook" href="#">Фейсбук</a></li>
+       <li><a class="social-button-instagram" href="#">Инстаграмм</a></li>
+	   <li><a class="social-button-twitter" href="#">Твиттер</a></li>
 	 </ul>  
     <nav>
 	   <a href="#">Войти</a>
@@ -152,15 +144,18 @@
 	   <a href="#">Корзина</a>
 	</nav>
 	<p class="footer-contacts">
-	   <a href="#">Тел.: +7(495) 495-95-95</a>
-	</p>   
+	   <a href="#">Тел.: +7(495) 495-95-95</a></p>   
 	<a href="#html">Логотип</a>
     </footer>
 	<section class="modal modal-write-us">
-	  <p><b>Ваше имя:</b></p>
-	  <p><b>Текст письма:</b></p>
-	  <p><b>Ваш e-mail:</b></p>	
-		<span class="button button-send"><b>Отправить</b></span>
+	<h2 class="visually-hidden">Обратная связь</h2>
+	  <p>Ваше имя:</p>
+	  <input placeholder="Представтесь, пожалуйста" type="text">
+	  <p>Текст письма:</p>
+	  <input placeholder="В свободной форме" type="text">
+	  <p>Ваш e-mail:</p>
+	  <input placeholder="Для отправки ответа" type="text">
+		<!-- Здесь будет форма -->
 	   	<span class="modal-close">x</span>
 	</section>
 	<section class="modal modal-map">
