--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 			<a class="main-header-logo">
 			<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
 			</a><br>
-				<form method="get">
-				<input placeholder="Поиск по сайту" type="search">
-				</form>
-				<a href="#">Войти</a>
-				<a href="#">Сравнить</a>
-				<a href="#">Корзина</a>
+		<form method="get">
+			<input placeholder="Поиск по сайту" type="search">
+			</form>
+		<ul class="user-navigation">
+			<li class="login"><a href="#">Войти</a></li>
+		</ul>
+		<ul>
+			<li class="compare"><a href="#" title="Сравнить товары">Сравнить</a></li>
+			<li class="cart"><a href="#" title="Оплатить покупку">Корзина</a></li>
+		</ul>
 	<nav class="main-navigation">
 		<ul class="main-navigation-list">
 			<li class="main-navigation"><a class="main-navigation-link" href="#">Каталог товаров</a></li>
@@ -49,22 +53,22 @@
 	<section class="popular-items">
 	<h2 class="visually-hidden">Популярные товары</h2>
 		<ul class="product-categories">
-			<li class="feature-item">
+			<li class="categories">
 				<a class="popular-goods" href="#">Виртуальная реальность</a>
 			</li>
-			<li class="feature-item">
+			<li class="categories">
 				<a class="popular-goods" href="#">Моноподы для селфи</a>
 			</li>
-			<li class="feature-item">
+			<li class="categories">
 				<a class="popular-goods" href="#">Экшен камеры</a>
 			</li>
-			<li class="feature-item">
+			<li class="categories">
 				<a class="popular-goods" href="#">Фитнес браслеты</a>
 			</li>
-			<li class="feature-item">
+			<li class="categories">
 				<a class="popular-goods" href="#">Умные часы</a>
 			</li>
-			<li class="feature-item">
+			<li class="categories">
 			<a class="popular-goods" href="#">Квадрокоптеры</a>
 			</li>
 		</ul>
@@ -82,7 +86,7 @@
 				<span class="button services-button">Кредит</span>
 			</li>
 		</ul>	
-			<b>Достака</b>
+			<b>Доставка</b>
 			<p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
 				подъезду совершенно бесплатно! Ведь мы неплохо<br>
 				заработаем, поднимая его на ваш этаж</p>
@@ -90,7 +94,7 @@
 		</section>
 		<section class="site-manufacturers">
 		<h2 class="visually-hidden">Партнеры</h2>
-		<ul class="logo-of-the-creators">
+		<ul class="brands-list">
 			<li class="partners">
 				<img src="#img/logo-1.img" width="50" height="50" alt="Dji">
 			</li>
@@ -129,9 +133,9 @@
 		<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
 		<p class="footer-location">г. Москва, ул. Строителей, 15</p>
 	<ul class="site-navigation">
-		<li><a href="#">Доставка</a></li>
-		<li><a href="#">Гарантия</a></li>
-		<li><a href="#">Контакты</a></li>
+		<li class="footer-services"<a href="#">Доставка</a></li>
+		<li class="footer-services"<a href="#">Гарантия</a></li>
+		<li class="footer-services""<a href="#">Контакты</a></li>
 	</ul>
 	<ul class="footer-social">
 		<li><a class="social-button-facebook" href="#">Фейсбук</a></li>
