Главная страница-исправлена

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section class="product-slider">
 		<h2 class="visually-hidden">Все о товаре</h2>
 		<ul class="main-image">
-			<li class="image"<img src="img/selfi.img" width="200" height="200" alt="Селфи палка">
+			<li class="image"><img src="#img/selfi.img" width="200" height="200" alt="Селфи палка">
 		</ul>
 		<b>Делай селфи, как Бен Стиллер!</b>
 		<p>Самая длинная палка для селфи доступна в нашем магазине<br>
@@ -135,9 +135,9 @@
 		<img src="#img/index-logo.svg" width="281" height="39" alt="Логотип DEVICE">
 		<p class="footer-location">г. Москва, ул. Строителей, 15</p>
 	<ul class="site-navigation">
-		<li class="footer-services"<a href="#">Доставка</a></li>
-		<li class="footer-services"<a href="#">Гарантия</a></li>
-		<li class="footer-services"<a href="#">Контакты</a></li>
+		<li class="footer-services"><a href="#">Доставка</a></li>
+		<li class="footer-services"><a href="#">Гарантия</a></li>
+		<li class="footer-services"><a href="#">Контакты</a></li>
 	</ul>
 	<ul class="social-list">
 		<li class="social-item"><a class="social-link facebook" href="#">Фейсбук</a></li>
